--- a/videos.html
+++ b/videos.html
@@ -66,40 +66,111 @@
             </div>
         </div>
     </section>
+    <section class="reviwes video-reviews">
+        <div class="container relative">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-2 col-xs-12">
+                    <div class="head">
+                        <h2>See What Our Customers Say...</h2>
+                    </div>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
+                                <footer>
+                                    <h4>Fernanda Hobdi</h4>
+                                    <p>Directeur Recrutements & Evaluations</p>
+                                </footer>
+                            </div>
+
+                            <div class="item">
+                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
+                                <footer>
+                                    <h4>Fernanda Hobdi</h4>
+                                    <p>Directeur Recrutements & Evaluations</p>
+                                </footer>
+                            </div>
+
+                            <div class="item">
+                                <p>Nukeboard.co has got to be one of the most dependable hiring tools around.it is amazing for keeping track of things and having a neatly organized list of applicants. it allows you to have so much detail and control over the way you handle your hiring process. it is very simple and uncomplicated and we enjoy using it.</p>
+                                <footer>
+                                    <h4>Fernanda Hobdi</h4>
+                                    <p>Directeur Recrutements & Evaluations</p>
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    /*================ Video ================*/-->
+    <section class="video video-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 flex">
+                    <h2>Watch How <br> we add value <br> to Businesses with <br> Promotional Videos</h2>
+                    <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    /*================ Banner bottom ================*/-->
+    <section class="banner-bootom video-banner-text">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                   <div class="head">
+                       <h2>Get Started With your video </h2>
+                   </div>
+                    <h2>Whether you already own a bu-siness or about to launch a new business, we offer you the best ICT solutions to get started – App, Website, Promotional Videos and general Branding.</h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--    /*================ Video Types ================*/-->
     <section class="video-type clearfix">
         <div class="container">
-           <div class="row">
-               <div class="col-xs-12">
-                   <div class="head">
-                       <h2>Watch Sample Animation Videos</h2>
-                   </div>
-               </div>
-           </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="head">
+                        <h2>Watch Sample Animation Videos</h2>
+                    </div>
+                </div>
+            </div>
             <div class="row vides-wraper">
                 <div class="col-md-4 videos-item">
-                   <div class="video-thumbnail">
-                       <img src="images/inner-page-video.png" alt="">
-                       <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                   </div>
+                    <div class="video-thumbnail">
+                        <img src="images/inner-page-video.png" alt="">
+                        <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
+                    </div>
                     <div class="type-button">
                         <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
                     </div>
                 </div>
                 <div class="col-md-4 videos-item">
-                   <div class="video-thumbnail">
-                       <img src="images/inner-page-video.png" alt="">
-                       <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                   </div>
+                    <div class="video-thumbnail">
+                        <img src="images/inner-page-video.png" alt="">
+                        <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
+                    </div>
                     <div class="type-button">
                         <a class="type-button-link-2" href="javascript:void(0);">3D Animation</a>
                     </div>
                 </div>
                 <div class="col-md-4 videos-item">
-                   <div class="video-thumbnail">
-                       <img src="images/inner-page-video.png" alt="">
-                       <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                   </div>
+                    <div class="video-thumbnail">
+                        <img src="images/inner-page-video.png" alt="">
+                        <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
+                    </div>
                     <div class="type-button">
                         <a class="type-button-link-3" href="javascript:void(0);">Whiteboard</a>
                     </div>
@@ -142,7 +213,7 @@
                                         <option value='the_title_value2'>3D Animation</option>
                                         <option value='the_title_value3'>Whiteboard</option>
                                         </select>
-                                        <div class="lines"></div>
+                                    <div class="lines"></div>
                                 </div>
                             </div>
                         </div>
@@ -165,13 +236,13 @@
                 </div>
                 <div class="col-md-4">
                     <div class="detailes-video">
-                        <h3 class="title">2D Animation</h3>
+                        <h3 class="title"></h3>
                         <h4>Number of Days</h4>
-                        <p class="day">7</p>
+                        <p class="day"></p>
                         <h4>Video Lenght</h4>
-                        <p class="minute">0 - 1 minute</p>
+                        <p class="minute"></p>
                         <h4>Esrimated Price</h4>
-                        <p class="price">50,000</p>
+                        <p class="price"></p>
                     </div>
                 </div>
             </div>
