--- a/ecommerce.html
+++ b/ecommerce.html
@@ -9,10 +9,10 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-    <title>SGS - Videos</title>
+    <title>SGS - Ecommerce</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,700|Noto+Sans" rel="stylesheet">
     <link href="css/slicknav.min.css" rel="stylesheet">
     <link href="css/YouTubePopUp.css" rel="stylesheet">
     <link href="fonts/stylesheet.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <![endif]-->
 </head>
 
-<body id="mail-send" class="page">
+<body id="ecommerce-page" class="page">
     <!--   /*================ Header ================*/-->
     <header class="main-header">
         <div class="container relative">
@@ -61,7 +61,7 @@
         <div class="container relative" id="banner-background">
             <div class="row">
                 <div class="col-md-12">
-                    <h2><span>Promotional</span>Videos </h2>
+                    <h2>Ecommerce </h2>
                 </div>
             </div>
         </div>
@@ -112,14 +112,16 @@
             </div>
         </div>
     </section>
-    <!--    /*================ Video ================*/-->
-    <section class="video video-inner">
+    <!--    /*================ store ================*/-->
+    <section class="ecommerce-store">
         <div class="container">
-            <div class="row">
-                <div class="col-xs-12 flex">
-                    <h2>Watch How <br> we add value <br> to Businesses with <br> Promotional Videos</h2>
-                    <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-
+            <div class="row disply-flex">
+                <div class="col-md-7 col-sm-6">
+                    <img src="images/ecommerce-computer.png" alt="" class="img-responsive">
+                </div>
+                <div class="col-md-5 col-sm-6">
+                    <h3>Ecommerce Store</h3>
+                    <p>Whether you are looking to build a career site for your company, a recruitment portal for your agency or to launch and grow a job site, we have the perfect theme for you to select and easily customise. </p>
                 </div>
             </div>
         </div>
@@ -130,9 +132,9 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <div class="head">
-                        <h2>Get Started With your video </h2>
+                        <h2>Begin your store with Us... </h2>
                     </div>
-                    <h2>Whether you already own a bu-siness or about to launch a new business, we offer you the best ICT solutions to get started – App, Website, Promotional Videos and general Branding.</h2>
+                    <h2>If pictures are worth a thousand words, then videos a million <br> sales increase. Let's make that awesome <br> video for you today!</h2>
                 </div>
             </div>
         </div>
@@ -140,40 +142,20 @@
     <!--    /*================ Video Types ================*/-->
     <section class="video-type clearfix">
         <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="head">
-                        <h2>Watch Sample Animation Videos</h2>
-                    </div>
-                </div>
-            </div>
             <div class="row vides-wraper">
-                <div class="col-md-4 col-sm-4 videos-item">
-                    <div class="video-thumbnail">
-                        <img src="images/inner-page-video.png" alt="">
-                        <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                    </div>
+                <div class="col-md-6 col-sm-6 videos-item">
+                    <div class="just-thumbnail"><img src="images/ecomerce-service-1.png" alt="" class="img-responsive"></div>
                     <div class="type-button">
                         <a class="type-button-link-1 current" href="javascript:void(0);">2D Animation</a>
                     </div>
+                    <p>My store front only.</p>
                 </div>
-                <div class="col-md-4 col-sm-4 videos-item">
-                    <div class="video-thumbnail">
-                        <img src="images/inner-page-video.png" alt="">
-                        <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                    </div>
+                <div class="col-md-6 col-sm-6 videos-item">
+                    <div class="just-thumbnail"><img src="images/ecomerce-service-2.png" alt="" class="img-responsive"></div>
                     <div class="type-button">
                         <a class="type-button-link-2" href="javascript:void(0);">3D Animation</a>
                     </div>
-                </div>
-                <div class="col-md-4 col-sm-4 videos-item">
-                    <div class="video-thumbnail">
-                        <img src="images/inner-page-video.png" alt="">
-                        <a href="https://www.youtube.com/watch?v=YAOIbHBEvi0" class="play"></a>
-                    </div>
-                    <div class="type-button">
-                        <a class="type-button-link-3" href="javascript:void(0);">Whiteboard</a>
-                    </div>
+                    <p>Multiple sellers, multiple store fronts</p>
                 </div>
             </div>
         </div>
@@ -214,10 +196,9 @@
                                     <input autocomplete="off" id="name" name="name" type="text" class="input">
                                 </div>
                                 <div class="text-field text select-type">
-                                    <select class="video-select-type">
-                                        <option value='the_title_value1'>2D Animation</option>
-                                        <option value='the_title_value2'>3D Animation</option>
-                                        <option value='the_title_value3'>Whiteboard</option>
+                                    <select class="video-select-type ecommerce-type">
+                                        <option class="value1" value='the_title_value1'>Online Store</option>
+                                        <option class="value2" value='the_title_value2'>MarketPlace</option>
                                         </select>
                                     <div class="lines"></div>
                                 </div>
@@ -239,7 +220,7 @@
                     </form>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="detailes-video video-detailes2">
+                    <div class="detailes-video ecommerce-detailes">
                         <h3 class="title"></h3>
                         <h4>Number of Days</h4>
                         <p class="day"></p>
@@ -312,6 +293,7 @@
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/YouTubePopUp.jquery.js" type="text/javascript"></script>
     <script src="js/custom.js" type="text/javascript"></script>
+
 </body>
 
 </html>
